force-app/main/default/objects/CostesOtrosEquipos__c/CostesOtrosEquipos__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CostesOtrosEquipos</label>
</CustomObject>