force-app/main/default/objects/CostesOtrosEquipos__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>