force-app/main/default/objects/CostesOtrosEquipos__c/fields/Equipos_interior__c.field-meta.xml
<CustomField>
    <fullName>Equipos_interior__c</fullName>
    <label>Equipos interior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>