force-app/main/default/objects/CostesOtrosEquipos__c/fields/Instalacion_interior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_interior__c</fullName>
    <label>Instalación interior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>