force-app/main/default/objects/CostesOtrosEquipos__c/listViews/Equipos.listView-meta.xml
<ListView>
    <fullName>Equipos</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Equipos_exterior__c</columns>
    <columns>Equipos_interior__c</columns>
    <columns>Instalacion_exterior__c</columns>
    <columns>Instalacion_interior__c</columns>
    <filterScope>Everything</filterScope>
    <label>Equipos</label>
    <language>es</language>
</ListView>